cmake_minimum_required(VERSION 3.8)
project(roscpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(arm_interface REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(geometry_msgs REQUIRED)

ament_export_dependencies(rclcpp)

add_executable(
  PublisherNode src/publisher_node.cpp)
add_executable(
  SubscriberNode src/subscriber_node.cpp)

add_executable(ServoPublisherNode src/servo_publisher.cpp)
add_executable(ServoSubscriberNode src/servo_subscriber.cpp)

add_executable(GripperServerNode src/gripper_server.cpp)
add_executable(GripperClientNode src/gripper_client.cpp)

add_executable(GripperActionServer src/gripper_action_server.cpp)
add_executable(GripperActionClient src/gripper_action_client.cpp)

add_executable(TF2ListenerNode src/tf2_listener.cpp)
add_executable(TF2BroadcasterNode src/tf2_broadcaster.cpp)

  ament_target_dependencies(PublisherNode std_msgs rclcpp)
  ament_target_dependencies(SubscriberNode  std_msgs rclcpp)

ament_target_dependencies( ServoPublisherNode rclcpp arm_interface)
ament_target_dependencies(ServoSubscriberNode  rclcpp arm_interface)
ament_target_dependencies(GripperServerNode rclcpp arm_interface)
ament_target_dependencies(GripperClientNode rclcpp arm_interface)
ament_target_dependencies(GripperActionServer rclcpp rclcpp_action arm_interface)
ament_target_dependencies(GripperActionClient rclcpp rclcpp_action arm_interface)
ament_target_dependencies(TF2ListenerNode tf2 tf2_ros rclcpp geometry_msgs)
ament_target_dependencies(TF2BroadcasterNode tf2 tf2_ros rclcpp geometry_msgs)

install(TARGETS
  PublisherNode
  SubscriberNode
  ServoPublisherNode
  ServoSubscriberNode
  GripperServerNode
  GripperClientNode
  GripperActionServer
  GripperActionClient
  TF2ListenerNode
  TF2BroadcasterNode
  DESTINATION lib/${PROJECT_NAME}
)
install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)
install(DIRECTORY config
  DESTINATION share/${PROJECT_NAME}
)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
